ImageHelper and ConverterHelper

--- a/SuperShop/Views/Products/Index.cshtml
+++ b/SuperShop/Views/Products/Index.cshtml
@@ -19,8 +19,12 @@
                 @Html.DisplayNameFor(model => model.Price)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.ImageUrl)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.LastPurchase)
             </th>
+
             <th>
                 @Html.DisplayNameFor(model => model.LastSale)
             </th>
