--- a/SuperShop/Views/Products/Index.cshtml
+++ b/SuperShop/Views/Products/Index.cshtml
@@ -19,7 +19,7 @@
                 @Html.DisplayNameFor(model => model.Price)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ImageUrl)
+                @Html.DisplayNameFor(model => model.ImageId)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.LastPurchase)
@@ -47,9 +47,9 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                @if (!string.IsNullOrEmpty(item.ImageUrl))
+                @if (!string.IsNullOrEmpty(item.ImageFullPath))
                 {
-                    <img src="@Url.Content(item.ImageUrl)" alt="Image" style="width:100px;height:150px;max-width:100%;height:auto"/>
+                    <img src="@Url.Content(item.ImageFullPath)" alt="Image" style="width:100px;height:150px;max-width:100%;height:auto"/>
                 }
             </td>
             <td>
