--- a/SuperShop/Views/Products/Edit.cshtml
+++ b/SuperShop/Views/Products/Edit.cshtml
@@ -14,8 +14,8 @@
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="ImageId" />
 
-          <partial name="_Products"/>
-            
+            <partial name="_Products" />
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
                 <a asp-action="Index" class="btn btn-success">Back to List</a>
@@ -24,10 +24,11 @@
         </form>
     </div>
     <div class="col-md-4">
-            <img src="@Url.Content(Model.ImageFullPath)" alt="Image" style="width:300px;height:450px;max-width:100%;height:auto" />
+        <img src="@Url.Content(Model.ImageFullPath)" alt="Image" style="width:300px;height:450px;max-width:100%;height:auto" />
     </div>
 </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{await Html.RenderPartialAsync("_ValidationCurrencyPartial");}
 }
