--- a/SuperShop.Prism/SuperShop.Prism/Views/ProductsPage.xaml
+++ b/SuperShop.Prism/SuperShop.Prism/Views/ProductsPage.xaml
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentPage
+             xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
              xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms" 
+             xmlns:i18n="clr-namespace:SuperShop.Prism.Helpers"
              xmlns:busyindicator="clr-namespace:Syncfusion.SfBusyIndicator.XForms;assembly=Syncfusion.SfBusyIndicator.XForms"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="SuperShop.Prism.Views.ProductsPage"
@@ -10,10 +12,11 @@
 
 
     <AbsoluteLayout>
-        <StackLayout AbsoluteLayout.LayoutBounds="0,0,1,1"
+        <StackLayout 
+            AbsoluteLayout.LayoutBounds="0,0,1,1"
                      AbsoluteLayout.LayoutFlags="All"
                      Padding="5">
-            <SearchBar Placeholder="Search product..."
+            <SearchBar Placeholder="{i18n:Translate SearchProduct}"
                        SearchCommand="{Binding SearchCommand}"
                        Text="{Binding Search}" />
             <CollectionView ItemsSource="{Binding Products}">
@@ -50,8 +53,14 @@
                                 Text="{Binding Name}" />
                             <Label
                                 FontAttributes="Italic"
-                                Text="{Binding Price, StringFormat='Price: {0:C2}'}"
-                                VerticalOptions="End" />
+                                VerticalOptions="End" >
+                                    <Label.FormattedText>
+                                        <FormattedString>
+                                            <Span Text="{i18n:Translate Price}"/>
+                                            <Span Text="{Binding Price, StringFormat=': {0:C2}'}"/>
+                                        </FormattedString>
+                                    </Label.FormattedText>
+                                </Label>
                             <Label
                                 FontAttributes="Italic"
                                 Text="{Binding Stock, StringFormat='Stock: {0:N2}'}"
@@ -64,7 +73,7 @@
         </CollectionView>
         </StackLayout>
         <busyindicator:SfBusyIndicator
-            Title="Loading"
+            Title="{i18n:Translate Loading}"
             AbsoluteLayout.LayoutBounds=".5,.5,.5,.5"
             AbsoluteLayout.LayoutFlags="All"
             AnimationType="Gear"
