--- a/SuperShop.Prism/SuperShop.Prism/Views/ProductDetailPage.xaml
+++ b/SuperShop.Prism/SuperShop.Prism/Views/ProductDetailPage.xaml
@@ -3,8 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
              xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms" 
+             xmlns:i18n="clr-namespace:SuperShop.Prism.Helpers"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="SuperShop.Prism.Views.ProductDetailPage"
+             BackgroundColor="{StaticResource ColorBackground}"
              Title="{Binding Title}">
     <ScrollView>
         <StackLayout Padding="10">
@@ -33,7 +35,7 @@
                     Grid.Row="0"
                     Grid.Column="0"
                     FontAttributes="Bold"
-                    Text="Name" />
+                    Text="{i18n:Translate Name}" />
                 <Label
                     Grid.Row="0"
                     Grid.Column="1"
@@ -42,7 +44,7 @@
                     Grid.Row="1"
                     Grid.Column="0"
                     FontAttributes="Bold"
-                    Text="Price" />
+                    Text="{i18n:Translate Price}" />
                 <Label
                     Grid.Row="1"
                     Grid.Column="1"
@@ -51,7 +53,7 @@
                     Grid.Row="2"
                     Grid.Column="0"
                     FontAttributes="Bold"
-                    Text="Last Purchase" />
+                    Text="{i18n:Translate LastPurchase}" />
                 <Label
                     Grid.Row="2"
                     Grid.Column="1"
@@ -60,7 +62,7 @@
                     Grid.Row="3"
                     Grid.Column="0"
                     FontAttributes="Bold"
-                    Text="Last Sale" />
+                    Text="{i18n:Translate LastSale}" />
                 <Label
                     Grid.Row="3"
                     Grid.Column="1"
@@ -69,7 +71,7 @@
                     Grid.Row="4"
                     Grid.Column="0"
                     FontAttributes="Bold"
-                    Text="IsAvailable"
+                    Text="{i18n:Translate IsAvailable}"
                     VerticalOptions="Center" />
                 <CheckBox
                     Grid.Row="4"
@@ -81,18 +83,18 @@
                     Grid.Row="5"
                     Grid.Column="0"
                     FontAttributes="Bold"
-                    Text="Stock" />
+                    Text="{i18n:Translate Stock}" />
                 <Label
                     Grid.Row="5"
                     Grid.Column="1"
                     Text="{Binding Product.Stock, StringFormat='{0:N2}'}" />
             </Grid>
             <Button
-                BackgroundColor="Navy"
+                BackgroundColor="#364F59"
                 Command="{Binding AddToCartBinding}"
                 CornerRadius="10"
-                Text="AddToCart"
-                TextColor="White"
+                Text="{i18n:Translate AddToCart}"
+                TextColor="#F0F0F2"
                 VerticalOptions="EndAndExpand" />
         </StackLayout>
     </ScrollView>
