--- a/SuperShop.Prism/SuperShop.Prism/Views/ProductsPage.xaml
+++ b/SuperShop.Prism/SuperShop.Prism/Views/ProductsPage.xaml
@@ -8,8 +8,9 @@
              xmlns:busyindicator="clr-namespace:Syncfusion.SfBusyIndicator.XForms;assembly=Syncfusion.SfBusyIndicator.XForms"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="SuperShop.Prism.Views.ProductsPage"
+             BackgroundColor="{StaticResource ColorBackground}"
              Title="{Binding Title}">
-
+             
 
     <AbsoluteLayout>
         <StackLayout 
@@ -60,11 +61,17 @@
                                             <Span Text="{Binding Price, StringFormat=': {0:C2}'}"/>
                                         </FormattedString>
                                     </Label.FormattedText>
-                                </Label>
+                            </Label>
                             <Label
                                 FontAttributes="Italic"
-                                Text="{Binding Stock, StringFormat='Stock: {0:N2}'}"
-                                VerticalOptions="End" />
+                                VerticalOptions="End">
+                                    <Label.FormattedText>
+                                        <FormattedString>
+                                            <Span Text="{i18n:Translate Stock}"/>
+                                            <Span Text="{Binding Stock, StringFormat=': {0:N2}'}"/>
+                                        </FormattedString>
+                                    </Label.FormattedText>
+                            </Label>
                         </StackLayout>
                         <Image Grid.Column="2" Source="ic_more_vert" />
                     </Grid>
@@ -77,10 +84,10 @@
             AbsoluteLayout.LayoutBounds=".5,.5,.5,.5"
             AbsoluteLayout.LayoutFlags="All"
             AnimationType="Gear"
-            BackgroundColor="Silver"
+            BackgroundColor="{StaticResource ColorAccent}"
             HorizontalOptions="Center"
             IsBusy="{Binding IsRunning}"
-            TextColor="White"
+            TextColor="{StaticResource ColorFontInverse}"
             VerticalOptions="Center"
             ViewBoxHeight="80"
             ViewBoxWidth="80" />
